--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2639,7 +2639,7 @@ input, select, textarea {
 		}
 
 		#header .image.avatar {
-			margin: 0 2.5em 1em 0;
+			margin: -2em 2.5em 0 0;
 			width: 16.25em;
 		}
 
